# TrajectoryControl

./: README.md  package.xml  setup.py
config/: params.yaml
launch/: trajectory_nodes.launch.py
trajectory_controller/: path_smoother.py  pure_pursuit_controller.py  test_scenarios.py  trajectory_generator.py
