<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>trajectory_controller</name>
  <version>1.0.0</version>
  <description>Simplified trajectory tracking with cubic spline and pure pursuit</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>turtlebot3_gazebo</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
